--- a/biblioteczka/książki/templates/książki/szablon.html
+++ b/biblioteczka/książki/templates/książki/szablon.html
@@ -1,18 +1,23 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>{% block title %}{% endblock %}</title>
-    </head>
-    <body>
-        <div id="header" >
-            Biblioteczka
-        </div>
-        <div id="content">
-            {% block content %}
-            {% endblock %}
-        </div>
-        <div id="sidebar">
-            <p>Panel boczny</p>
-        </div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>{% block title %}Biblioteczka{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'książki/style.css' %}">
+  </head>
+
+  <body>
+    <div id="header">Biblioteczka</div>
+
+    <div id="layout">
+      <div id="sidebar">
+        {% include "książki/menu.html" %}
+      </div>
+
+      <div id="content">
+        {% block content %}{% endblock %}
+      </div>
+    </div>
+  </body>
 </html>
